fixed overflow isssue

--- a/index.css
+++ b/index.css
@@ -193,7 +193,7 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 100vw;
+    width: 100vw - 20px;
     padding: 10px;
 }
 
@@ -332,7 +332,7 @@ p {
 
 .content__references {
     background-color: rgb(246, 246, 246);
-    width: 100vw;
+    width: 100vw - 50px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -375,7 +375,7 @@ p {
 .content__destinations {
     display: flex;
     justify-content: flex-start;
-    width: 100vw;
+    width: 100vw - 50px;
     padding-bottom: 50px;
     border-bottom: 1px solid rgb(212, 212, 212);
     box-shadow: 0px 25px 20px -40px rgba(0,0,0,0.45);
@@ -404,7 +404,7 @@ p {
 /* Styled three sections - Support, Hosting and Airbnb */
 
 .content__box {
-    width: 100vw;
+    width: 100vw - 50px;
     padding-top: 12px;
     padding-bottom: 27px;
     border-bottom: 1px solid rgb(212, 212, 212);
